# jinmo-yolo

./: Untitled.ipynb  pyproject.toml
data/: obj.data  train.txt  val.txt
data/train/: 0-766325.txt  1-32102.txt  10-844424.txt  11-150355.txt  12-66530.txt  13-229666.txt  14-967069.txt  15-607413.txt  16-366189.txt  17-103012.txt  18-940637.txt  19-529655.txt  2-1157.txt  20-207422.txt  21-448179.txt  22-320044.txt  23-578646.txt  24-732021.txt  25-612020.txt  26-766709.txt  27-280115.txt  28-91633.txt  29-119840.txt  3-420650.txt  30-527657.txt  31-119399.txt  32-652234.txt  33-310944.txt  34-621245.txt  35-393889.txt  36-521730.txt  37-922535.txt  38-142081.txt  39-21013.txt  4-559074.txt  40-647151.txt  41-294879.txt  42-947828.txt  43-611588.txt  44-582544.txt  (+41 more)
data/val/: 81-774296.txt  82-583604.txt  83-628031.txt  84-49584.txt  85-925546.txt  86-753278.txt  87-742711.txt  88-203140.txt  89-537881.txt  90-352769.txt  91-369966.txt  92-463711.txt  93-704445.txt  94-975668.txt  95-493532.txt  96-720400.txt  97-485155.txt  98-152058.txt  99-347577.txt
tests/: test_genesis_logo_detection.py
