[tool.poetry]
name = "genesis-logo-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
wandb = "^0.10.22"
jupyterlab = "3.1.13"
numpy = "^1.17"
PyYAML = "5.3.1"
pandas = "^1.2.3"
scipy = "^1.6.1"
scikit-learn = "^0.24.1"
matplotlib = "^3.3.4"
jupyter = "^1.0.0"
regex = "^2021.3.17"
deepspeed = "0.4.2"
mpi4py = "^3.0.3"
nvidia-ml-py3 = "^7.352.0"
pytorch-fast-transformers = "^0.4.0"
torch = "1.8.1"
torchvision = "0.9.1"
torchaudio = "0.8.1"
Pympler = "^0.9"
pyarrow = "^4.0.1"
clip = {git = "https://github.com/openai/CLIP", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
